--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.icon-size {
+  font-size: 50px;
+  text-align: center;
+}
+
+.icon-color {
+  color: #0d6efdc4;
+}
+
+.text-black-50 {
+  color: rgb(0 0 0 / 26%) !important;
+}
+
+
